# Ork

./: .gitignore  README.md  constraints.py  demo_tasks.py  main.py  ork.py  pyproject.toml  tmp_ctx.py  tmp_exit.py  tmp_mp.py
src/ork/: __init__.py  core.py  event.py  promise.py
viz/: AGENTS.md  vite.config.ts
viz/src/: App.css  App.tsx  index.css  types.ts  workflowState.ts
viz/src/components/: FileSelector.tsx  NavigationControls.tsx  PromisesPanel.tsx  ScratchPanel.tsx  TaskGraph.tsx
workflows/: demo_tasks.py  main.py  utils.py  wf1.py  wf2.py  wf3.py
